Fixing footer overlap

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
   color: var(--primary);
   background: var(--secondary);
   margin: 30px 20vw;
+  padding-bottom: 15px;
 }
 
 h1 {
